# ably-ts-sdk-to-rust

./: .claude_session.json  .gitignore  ABLY_SDK_PORT_ANALYSIS.md  CLAUDE.md  Cargo.toml  FUNCTIONALITY_REPORT.md  PROJECT_FINAL_STATUS.md  PROJECT_STATUS.md  README.md  ULTRATHINK_SESSION_REPORT.md  test_ably_functionality.rs  test_ci_expectations.sh  test_websocket.rs  test_workspace.sh
.github/workflows/: ci.yml
ably-core/: Cargo.toml
ably-core/src/: client.rs  error.rs  lib.rs  logging.rs  retry.rs
ably-core/src/auth/: jwt.rs  mod.rs
ably-core/src/channel/: mod.rs
ably-core/src/client/: mod.rs  realtime.rs  rest.rs
ably-core/src/connection/: mod.rs  state_machine.rs
ably-core/src/crypto/: mod.rs
ably-core/src/delta/: channel_delta.rs  mod.rs  vcdiff.rs
ably-core/src/encryption/: channel_cipher.rs  mod.rs
ably-core/src/error/: ably_codes.rs  advanced.rs
ably-core/src/http/: config.rs  enhanced.rs  mod.rs  resilience.rs
ably-core/src/logging/: advanced.rs
ably-core/src/plugin/: mod.rs
ably-core/src/protocol/: encoding.rs  messagepack.rs  messages.rs  mod.rs
ably-core/src/push/: mod.rs
ably-core/src/replay/: channel_replay.rs  history_replay.rs  mod.rs  presence_replay.rs  state_recovery.rs
ably-core/src/transport/: config.rs  mod.rs  resilience.rs
ably-core/tests/: auth_debug_test.rs  basic_history_test.rs  channel_state_test.rs  channel_test.rs  connection_state_test.rs  debug_json_test.rs  encryption_test.rs  error_handling_test.rs  full_integration_test.rs  heartbeat_test.rs  history_replay_test.rs  http_client_integration_test.rs  http_client_production_test.rs  http_client_test.rs  integration_harness.rs  integration_harness_test.rs  json_parsing_test.rs  json_structure_test.rs  jwt_auth_test.rs  live_functionality_test.rs  logging_test.rs  messagepack_test.rs  protocol_messages_test.rs  push_notifications.rs  push_notifications_test.rs  rest_client_test.rs  stats_structure_test.rs  test_delta_compression.rs  test_framework_requirements.rs  test_token_request.rs  websocket_debug_test.rs  websocket_endpoint_test.rs  websocket_live_test.rs  websocket_transport_test.rs
ably-core/tests/common/: mod.rs  test_harness.rs
ably-ffi/: Cargo.toml  build.rs
ably-ffi/src/: lib.rs
ably-node/: Cargo.toml  package.json
ably-node/src/: lib.rs
ably-wasm/: Cargo.toml
ably-wasm/src/: lib.rs
reference/: ably-api-credentials.md  ably-credentials.env.example
tasks/: INFRASTRUCTURE_PHASE_STATUS.md  PROJECT_COMPLETION_STATUS.md  PROJECT_STATUS.md
tasks/task-files/foundation/: FOUND-001-initialize-rust-workspace.md  FOUND-002-setup-cicd-pipeline.md  FOUND-003-configure-testing-framework.md  FOUND-004-error-handling-system.md  FOUND-005-logging-and-tracing.md
tasks/task-files/infrastructure/: INFRA-001-http-client.md  INFRA-001-implement-http-client.md
tasks/task-files/production/: PROD-001-fix-json-parsing.md  PROD-002-websocket-token-refresh.md  PROD-003-protocol-handlers.md  PROD-004-presence-operations.md  PROD-005-cicd-pipeline.md  PROD-006-pagination-parsing.md  PROD-007-typescript-definitions.md  PROD-008-migration-guide.md  PROD-009-connection-recovery.md  PROD-010-benchmarking.md
tasks/tracker/: README.md  decisions.md  tracker.md
