[workspace]
resolver = "2"
members = [
    "ably-core",
    "ably-node",
    "ably-wasm",
    "ably-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ably SDK Team"]
license = "Apache-2.0"
repository = "https://github.com/ably/ably-rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"