[workspace]
resolver = "2"
members = [
    "ably-core",
    "ably-node",
    "ably-wasm",
    "ably-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ably SDK Team"]
license = "Apache-2.0"
repository = "https://github.com/ably/ably-rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }

# WebSocket and protocol
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
rmp-serde = "1.3"
base64 = "0.22"

# Utilities
dashmap = "6.0"
parking_lot = "0.12"
uuid = { version = "1.8", features = ["v4", "serde"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
ring = "0.17"
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
rand = "0.8"

# Development dependencies
[workspace.dev-dependencies]
criterion = "0.5"
proptest = "1.4"
pretty_assertions = "1.4"

# Optimization settings
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"