[package]
name = "ably-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
serde_urlencoded = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"